# format-induced-moral-overresolution

./: .env.example  .gitignore  CITATION.cff  LICENSE  README.md  execute_milestone_run.bat  execute_remaining_milestone_run.bat  final_for_osf.md  materialize_paraphrases.bat  osf_document.md  pyproject.toml  run_manifest_amendment_2026-06-17_gemini_to_grok_v1.md  run_manifest_paper_analysis_50k_v1.md  run_manifest_post50k_completion_v1.md  run_manifest_pre13k_freeze_v1.md  run_manifest_pre25k_freeze_v1.md  run_manifest_pre35k_freeze_v1.md  run_manifest_pre3k_freeze_v2.md  run_manifest_pre50k_freeze_v1.md  run_manifest_pre6k_freeze_v1.md  run_manifest_v1.md  start_milestone_run.bat
article/: cover_letter.md  nmi_moral_overresolution_draft_50k_v5.md  nmi_supplementary_information_50k_v2.md  old_moral_overresolution_draft_50k_v5.md  rsos_moral_overresolution_draft_v1.md  rsos_supplementary_information_v1.md
common/: README.md  env.example  example.py
common/llm_api/: __init__.py  config.py  failure_policy.py  json_output.py  providers.py
common/tests/: test_llm_api.py
docs/: BUG_FIX_LOG.md  DATA_SETUP.md  HANDOFF_STATUS.md  MODEL_SELECTION_NOTES.md  PUBLIC_RELEASE_CHECKLIST.md  RUN_READINESS_CHECKLIST.md  STUDY_PROCESS.md
post_run/: archive_upload_inventory_50k.md  data_availability_statement_50k.md  reproducibility_commands_50k.md
src/analysis/: __init__.py  final_50k_exports.py  render_final_figures.py  (+1 more)
submission/: BUILD_NOTES.md  BUILD_REPORT.md  MANIFEST.md  cover_letter.tex  manuscript.md  supplementary_information.md
tests/: test_core_pipeline.py
(+117 files in other folders)
